# media-python

./: CHANGELOG.md  README.md  pyproject.toml  release.config.js
.github/workflows/: ci.yaml
src/media/: __init__.py  container.py  errors.py  model.py  s3.py
src/omnixys_media/: __init__.py  container.py  model.py  s3.py
tests/: test_import.py
