[project]
name = "omnixys-media"
dynamic = ["version"]
description = "Omnixys shared media/storage package (S3/MinIO with aiobotocore)"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.14"
dependencies = [
  "aiobotocore>=2.18.0",
]

authors = [
  {name = "Omnixys Team", email = "team@omnixys.com"},
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/omnixys_media/__init__.py"

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
  "ANN101", "ANN401", "S101",
  "T20", "FBT", "D", "INP001",
]
"src/**" = [
  "D", "ANN401", "ARG002", "S104", "S105",
]
"src/omnixys_media/s3.py" = [
  "EM101", "EM102", "S107",
]
"src/omnixys_media/container.py" = [
  "S107",
]
"src/omnixys_media/errors.py" = [
  "EM101", "EM102",
]

[tool.mypy]
strict = true
ignore_missing_imports = true

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "ruff>=0.15.21",
    "pytest>=9.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.14.1",
]
